# shopping-design-system

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/account/: admin.py  models.py
apps/account/migrations/: 0001_initial.py
apps/cart/: admin.py  models.py  serializers.py
apps/cart/migrations/: 0001_initial.py
apps/catalog/: admin.py  models.py  serializers.py
apps/catalog/migrations/: 0001_initial.py
apps/core/: models.py  permissions.py
apps/notification/: admin.py  models.py  serializers.py
apps/order/: admin.py  models.py  serializers.py
apps/order/migrations/: 0001_initial.py
apps/payment/: admin.py  models.py  serializers.py
apps/payment/migrations/: 0001_initial.py
apps/product/: admin.py  models.py  serializers.py
apps/product/migrations/: 0001_initial.py
apps/shipment/: admin.py  apps.py  models.py  serializers.py
apps/shipment/migrations/: 0001_initial.py
ecommerce/: asgi.py  settings.py  urls.py  wsgi.py
